Fix overlap bug on me and project pages.

--- a/portfolio/src/app/core/components/projects/projects.component.scss
+++ b/portfolio/src/app/core/components/projects/projects.component.scss
@@ -35,6 +35,9 @@ section {
   background-position: right right;
   background-attachment: fixed;
 
+  position: relative;
+  z-index: 0;
+
   .triangle {
     position: absolute;
     bottom: 0;
@@ -56,14 +59,14 @@ section {
     margin-bottom: 10vh;
 
     color: #202020;
+
+    h2 {
+      margin: 0;
+
+      font-size: 4vw;
+      font-weight: 300;
+    }
   }
-}
-
-h2 {
-  margin: 0;
-
-  font-size: 4vw;
-  font-weight: 300;
 }
 
 section:nth-of-type(even) {
